# canvas-lms-mcp

./: .dockerignore  .env.example  .env.llm.example  .env.save  .gitignore  .gitlab-ci.yml  .gitlab-setup.md  BANK_STATEMENT_README.md  CLAUDE.md  DOCKER.md  Dockerfile  KIRO_CLI_INTEGRATION.md  LICENSE  MCP_CLIENT_SETUP.md  MCP_SERVER_DESCRIPTION.md  QCHAT_INTEGRATION.md  README.md  __init__.py  bank_statement_reader.py  cline-mcp-config.json  config.py  cursor-mcp-config.json  docker-build.sh  docker-compose.llm.yml  docker-compose.yml  docker-entrypoint.sh  docker-run.sh  env_save  generate_spec.py  income_2025_annual_summary.csv  income_2025_bitcoin_schedule_d.csv  income_2025_business_only.csv  income_2025_cashapp.csv  inspect_pdf.py  orchestrator.py  package-lock.json  pacman_accountant.py  petition.aux  petition.tex  process_bank_statement.py  (+16 more)
.cursor/: worktrees.json
.github/: test-canvas-api.yml
_data/: README.md  canvas_announcements.json  canvas_ta_contacts.json  canvas_ta_contacts.yml  schema.sql
_site/: README.md  index.md  proposal.md
adaptive_learner/: __init__.py  canvas_fetcher.py  learner.py  perceptron_model.py  rl_agent.py
agents/: __init__.py  latex-transcriber.md  presentation-generator.md
cloud_fronts_group/: income_2025_all_deposits.csv  inspect_feb.py  inspect_sep.py  pacman.jsonl  pacman_accountant_v2.py  pacman_tax_filer.py  verify_jan.py
content_pipeline/: __init__.py  blog_generator.py  reveal_generator.py
docs/: ADAPTIVE_LEARNER_PIPELINE.md  AGENT_REVIEWS.md  AUTOGEN_INTEGRATION.md  CI_CD_REPOS.md  EMBEDDINGS_AND_PROMPTS_PLAN.md  GITLAB_CI_TROUBLESHOOTING.md  GITLAB_GRAPHQL_TOKEN.md  LANGSMITH_INTEGRATION.md  LLM_LOCAL_COMPOSE.md  MCP_SERVERS_COURSE_CONTENT.md  PLAN_COLLABORATORS_UNIX_GITHUB_GITLAB.md  PODMAN_RUNNER.md  REVEAL_PLUGINS_TRUSTWORTHY_AI.md  SETUP_AND_CICD.md  SOFTWARE_VERIFICATION_VALIDATION_REQUIREMENTS.md  SYNC_GITLAB_STRIP_TOKEN.md  TEST_PLAN_REPO_SYNC.md  VALIDATION_PIPELINES.md  sync-diff-ci-combined.txt
jekyll_site/: _config.yml  project-plan.md  syllabus-alignment.md
mcp/: README.md
pipelines/: __init__.py  base.py  content_validator.py  langchain_integration.py  link_validator.py  news_validator.py  run_pipelines.py
prompts/: deep-dive-mcp-server.md
schema/: README.md  syllabus_schema.json
scripts/: GITLAB_SSH_SETUP.md  USER_SETUP_SUMMARY.md  __init__.py  add_mcp_submodule.py  add_mcp_submodule.sh  clone-for-casey.sh  clone-for-doug.sh  configure-doug-gitlab.sh  docker_orchestrate.py  download_course_content.py  embed_docs.py  embed_mcp_server.py  fetch_canvas_announcements.py  generate_badges.py  run_canvas_mcp_podman.sh  run_repo_sync_test_plan.sh  run_trustworthy_ai_podman.sh  sync_repos.py  (+3 more)
(+89 files in other folders)
